--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<!-- end CSS-->
 
 		<!-- Modernizr -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	</head>
 
 	<body>
@@ -47,7 +47,7 @@
 		<canvas id="backgroundvas"></canvas>
 
 		<!-- Grab Google CDN's jQuery; fall back to local if offline -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
 		<!-- local js -->
 		<!--<script src="math.js"></script>-->
